--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -66,7 +67,11 @@ dependencies {
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     // Retrofit with Scalar Converter
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+//    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     // Moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    // Kotlinx Serialization dependency
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
 }
